# magic-collection-manager

./: .gitignore  Cargo.toml  README.md
src/: add.rs  config.rs  google.rs  lib.rs  link.rs  main.rs
src/commands/: add.rs  link.rs  mod.rs  update.rs
src/model/: card.rs  set.rs
src/services/: googlesheets.rs  mod.rs  scryfall.rs
